Fix safari flex-box, close-button visibility

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -512,6 +512,7 @@ footer
 
 #exp-container
 	position relative
+	display -webkit-flex
 	display flex
 
 .experience
@@ -610,7 +611,7 @@ footer
 		left .1em
 		width 30px
 		height 30px
-		color dim-blue
+		color lighten(dim-blue, 30%)
 		text-shadow 0px -1px dark-dark-gray
 
 		&:hover
